ginkgo: Add fingerprint configuration to overlay
The framework was changed in Android R to require explicit authenticator registration.
This change allows apps to continue to use the fingerprint sensor.

Bug: 147445115

Test: Builds
Change-Id: Id3385edc784b2053c8b54ec3153728f4e6e22a45
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/overlay/Frameworks/res/values/config.xml
+++ b/overlay/Frameworks/res/values/config.xml
@@ -451,4 +451,12 @@
 
     <!-- Boolean indicating whether 802.11r Fast BSS Transition is enabled on this platform -->
     <bool translatable="false" name="config_wifi_fast_bss_transition_enabled">true</bool>
+
+    <!-- List of biometric sensors on the device, in decreasing strength. Consumed by AuthService
+         when registering authenticators with BiometricService. Format must be ID:Modality:Strength,
+         where: IDs are unique per device, Modality as defined in BiometricAuthenticator.java,
+         and Strength as defined in Authenticators.java -->
+    <string-array name="config_biometric_sensors" translatable="false" >
+        <item>0:2:15</item> <!-- ID0:Fingerprint:Strong -->
+    </string-array>
 </resources>
