ginkgo: Disable alpha compositing in WM
 * Completely eliminates occasional jank in few animations

Change-Id: I4c01088325fdbfb32c591c3ce52a1083f8d507d1
Signed-off-by: Mrinal Ghosh <mg712702@gmail.com>

--- a/overlay/Frameworks/res/values/config.xml
+++ b/overlay/Frameworks/res/values/config.xml
@@ -349,4 +349,10 @@
     <integer-array name="config_keyboardTapVibePattern">
         <item>20</item>
     </integer-array>
+
+    <!-- Flag indicating whether the surface flinger has limited
+         alpha compositing functionality in hardware.  If set, the window
+         manager will disable alpha trasformation in animations where not
+         strictly needed. -->
+    <bool name="config_sf_limitedAlpha">true</bool>
 </resources>
