--- a/overlay/Frameworks/res/values/config.xml
+++ b/overlay/Frameworks/res/values/config.xml
@@ -43,12 +43,22 @@
                 <string ...>M -5,0 L -5,10 L 5,10 L 5,0 Z @dp</string>
          @see https://www.w3.org/TR/SVG/paths.html#PathData
          -->
-    <string translatable="false" name="config_mainBuiltInDisplayCutout">M74,80 C35.0642426,79.9994271 10.3980334,79.9993316 0.00137259186,79.9997135 C-10.3961724,80.0000955 -35.0632966,80.000191 -74,80 L-74,0 L74,0 L74,80 Z</string>
+    <string translatable="false" name="config_mainBuiltInDisplayCutout">
+         M -110 0
+         C -100 0 -90 5 -55 50
+         C -44 65 -21 81 0 80
+         C 21 81 44 65 55 50
+         C 90 5 100 0 110 0
+         Z
+    </string>
 
-    <!-- Whether the display cutout region of the main built-in display should be forced to
-         black in software (to avoid aliasing or emulate a cutout that is not physically existent).
+    <!-- Like config_mainBuiltInDisplayCutout, but this path is used to report the
+         one single bounding rect per device edge to the app via
+         {@link DisplayCutout#getBoundingRect}. Note that this path should try to match the visual
+         appearance of the cutout as much as possible, and may be smaller than
+         config_mainBuiltInDisplayCutout
          -->
-    <bool name="config_fillMainBuiltInDisplayCutout">false</bool>
+    <string translatable="false" name="config_mainBuiltInDisplayCutoutRectApproximation">M74,80 C35.0642426,79.9994271 10.3980334,79.9993316 0.00137259186,79.9997135 C-10.3961724,80.0000955 -35.0632966,80.000191 -74,80 L-74,0 L74,0 L74,80 Z</string>
 
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">80.0px</dimen>
